--- a/www/logng_style.css
+++ b/www/logng_style.css
@@ -1,6 +1,6 @@
 #syslogContainer {
-	width: 63em;
-	height: 27em;
+	width: 68em;
+	height: 45em;
 	resize: both;
 	overflow: auto;
 	font-family: 'Courier New', Courier, mono;
@@ -13,11 +13,11 @@
 }
 #syslogTable th {
 	margin: 0px;
-	border: 1px solid #2F3A3E;
 	position: sticky;
 	top: 0;
 	background: #2F3A3E;
 	text-align: left;
+	padding-left: 5px;
 }
 #syslogTable td {
 	padding-left: 2px;
@@ -26,6 +26,16 @@
 	border: 1px solid gray;
 	overflow: hidden;
 	white-space: nowrap;
+}
+
+#syslogTable col:first-of-type {
+	border-left: 2px solid #2F3A3E;
+}
+#syslogTable td:last-of-type, #syslogTable th:last-of-type, #syslogTable td:first-of-type {
+	border-right: 2px solid #2F3A3E;
+}
+#syslogTable tr:last-of-type {
+	border-bottom: 2px solid #2F3A3E;
 }
 
 /* Hide raw message, or everything else */
@@ -62,4 +72,30 @@
 #syslogTable.nohost th:nth-of-type(4),
 #syslogTable.nohost td:nth-of-type(4) {
 	display: none;
+}
+
+/* Row priority colours */
+#syslogTable tr.lvl_emerg {
+	background-color: black;
+}
+#syslogTable tr.lvl_alert {
+	background-color: maroon;
+}
+#syslogTable tr.lvl_crit {
+	background-color: crimson;
+}
+#syslogTable tr.lvl_err {
+	background-color: darkorange;
+}
+#syslogTable tr.lvl_warning {
+	background-color: goldenrod;
+}
+#syslogTable tr.lvl_notice {
+	background-color: midnightblue;
+}
+#syslogTable tr.lvl_info {
+	background-color: steelblue;
+}
+#syslogTable tr.lvl_debug {
+	background-color: slategray;
 }
