--- a/www/logng_style.css
+++ b/www/logng_style.css
@@ -22,6 +22,8 @@
 #syslogTable td {
 	padding-left: 2px;
 	padding-right: 2px;
+	padding-top: 0px;
+	padding-bottom: 0px;
 	margin: 0px;
 	border: 1px solid gray;
 	overflow: hidden;
