--- a/www/logng_style.css
+++ b/www/logng_style.css
@@ -1,10 +1,9 @@
 #syslogContainer {
-	width: 68em;
-	height: 45em;
+	width: 62em;
+	height: 42em;
 	resize: both;
 	overflow: auto;
 	font-family: 'Courier New', Courier, mono;
-	font-size: 11px;
 }
 #syslogTable {
 	table-layout: fixed;
@@ -19,13 +18,17 @@
 	text-align: left;
 	padding-left: 5px;
 }
+#syslogTable tbody {
+	line-height: normal;
+	height: 11px;
+}
 #syslogTable td {
 	padding-left: 2px;
 	padding-right: 2px;
 	padding-top: 0px;
 	padding-bottom: 0px;
 	margin: 0px;
-	border: 1px solid gray;
+	border-bottom: 1px dotted gray;
 	overflow: hidden;
 	white-space: nowrap;
 }
